# fastapi-authkit

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  contributing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: requirements.txt  test.py
fastapi_authkit/: __init__.py  base.py  settings.py  utils.py
fastapi_authkit/core/: oauth.py  providers.py
fastapi_authkit/interfaces/: logics.py  provider.py
